feat: добавлены ручки для /api/store, тесты, изменена логика shop service
